[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameHUDRelated/GameStatsPanel/StatOverviewPanel/StatsOverviewPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/WholeScreenGameStatsPanel/WholeScreenGameStatsPanel.gd" type="Script" id=2]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/WholeScreenGameStatsPanel/Assets/Gray_4x4.png" type="Texture" id=3]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/BackButtonStandard/PlayerGUI_BackButtonStandard.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[node name="WholeScreenGameStatsPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="StatsOverviewPanel" parent="." instance=ExtResource( 1 )]
margin_left = 105.0
margin_top = 90.0
margin_right = 855.0
margin_bottom = 540.0
size_flags_horizontal = 6
size_flags_vertical = 10
custom_constants/margin_bottom = 30

[node name="LoadingStatsPanel" type="MarginContainer" parent="."]
visible = false
margin_right = 960.0
margin_bottom = 540.0

[node name="LoadingBackground" type="TextureRect" parent="LoadingStatsPanel"]
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Label" type="Label" parent="LoadingStatsPanel"]
margin_top = 254.0
margin_right = 960.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 1 )
text = "Loading Game Stats..."
align = 1
valign = 1

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = 936.0
margin_right = 960.0
margin_bottom = 24.0
size_flags_horizontal = 10
size_flags_vertical = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5

[connection signal="on_button_released_with_button_left" from="BackButton" to="." method="_on_BackButton_on_button_released_with_button_left"]
